update _config.yml, metadata.liquid and social.liquid

--- a/_includes/metadata.liquid
+++ b/_includes/metadata.liquid
@@ -120,12 +120,16 @@
     {% capture link %}https://telegram.me/{{ site.telegram_username }}{% endcapture %}
     {% assign sameaslinks = sameaslinks | push: link %}
   {% endif %}
+  {% if site.matrix_username%}
+    {% capture link %}https://matrix.to/#/{{ site.matrix_username }}{% endcapture %}
+    {% assign sameaslinks = sameaslinks | push: link %}
+  {% endif %}
   {% if site.linkedin_username %}
     {% capture link %}https://www.linkedin.com/in/{{ site.linkedin_username }}{% endcapture %}
     {% assign sameaslinks = sameaslinks | push: link %}
   {% endif %}
-  {% if site.x_username %}
-    {% capture link %}https://twitter.com/{{ site.x_username }}{% endcapture %}
+  {% if site.twitter_username %}
+    {% capture link %}https://twitter.com/{{ site.twitter_username }}{% endcapture %}
     {% assign sameaslinks = sameaslinks | push: link %}
   {% endif %}
   {% if site.mastodon_username %}
